--- a/index.html
+++ b/index.html
@@ -60,6 +60,67 @@
         </div>
         <!--Slider End-->
 
+        <div id="slider-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center">
+                        A RENTAL EXPERIENCE DESIGNED FOR CUSTOMERS NEED
+                    </div>
+                    <div class="col-md-6 text-center">
+                        RETAIL SHOPS | ELECTRONICS SHOPS | FOOD COURT
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 text-center">
+                        <h5>Promise of Great Location</h5>
+                        <span>Sector 50 Metro Station at doorstep</span>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <h5>Promise of Footfall</h5>
+                        <span>Prominent location with a catchment of 8 lakh</span>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <h5>Promise of Convenience</h5>
+                        <span>Parking space for more than 5000 cars</span>
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <h5>Promise of Quality</h5>
+                        <span>Unmatched construction quality</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Welcome to the Hub of Endless Possibilities</h5>
+                        <span>Noida-NCR has added many commercial developments to the nation. But here is a commercial property in noida with assured return in Sector-75, Noida that will mark a new era by transforming commercial investments and redefining international lifestyle trends in modern times. Under the aegis of SPECTRUM GROUP, Spectrum@Metro is a benchmark in commercial and retail development, a one of its kind project located at Sector 75, Noida.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>TYPES OF UNITS</h5>
+                    </div>
+                </div>
+                <div class="col-md-12 text-center">
+                    
+                </div>
+            </div>
+        </div>
+
+
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
