--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.slim.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css" integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -115,12 +120,255 @@
                     </div>
                 </div>
                 <div class="col-md-12 text-center">
-                    
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Retail Space</h5>   
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Office Space</h5>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Service Apartments</h5>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Service Apartments</h5>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Non-Lockable Space</h5>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Food Court</h5>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Multiplex</h5>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="item-box">
+                                <h4></h4>
+                                <h5>Entertainment & Kids Zone</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Highlights</h5>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <img src="images/climate-300x300.png">
+                            <p>One of the biggest & longest High Street Project of North India</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <img src="images/climate-300x300.png">
+                            <p>European Street Style Elevation</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <img src="images/climate-300x300.png">
+                            <p>3 level food court, restaurants & entertainment zone</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <img src="images/climate-300x300.png">
+                            <p>Ample Parking Space for efficient parking management</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <img src="images/climate-300x300.png">
+                            <p>Four side open (multiple entry & exit points)</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <img src="images/climate-300x300.png">
+                            <p>Door step connectivity to Sec- 50 Metro Station</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Price List</h5>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <h6 class="item1">Retail Shops</h6>
+                            <h6 class="item2">146-635 Sq.ft.</h6>
+                            <h6 class="item3">₹ 37 Lacs* Onwards</h6>
+                            <input type="button" class="button" value="Enquire Now">
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <h6 class="item1">Retail Shops</h6>
+                            <h6 class="item2">146-635 Sq.ft.</h6>
+                            <h6 class="item3">₹ 37 Lacs* Onwards</h6>
+                            <input type="button" class="button" value="Enquire Now">
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <h6 class="item1">Retail Shops</h6>
+                            <h6 class="item2">146-635 Sq.ft.</h6>
+                            <h6 class="item3">₹ 37 Lacs* Onwards</h6>
+                            <input type="button" class="button" value="Enquire Now">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box6">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Floors Plan</h5>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <h4></h4>
+                            <input type="button" class="button" value="Enquire Now">
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <h4></h4>
+                            <input type="button" class="button" value="Enquire Now">
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="item">
+                            <h4></h4>
+                            <input type="button" class="button" value="Enquire Now">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box7">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Gallery</h5>
+                    </div>
+                    <div class="col-md-4 text-center item">
+                        <img src="images/01.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-md-4 text-center item">
+                        <img src="images/02.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-md-4 text-center item">
+                        <img src="images/03.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-md-4 text-center item">
+                        <img src="images/04.jpg" class="img-fluid">
+                    </div>
+                    <div class="col-md-4 text-center item">
+                        <img src="images/05.jpg" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div id="home-box8">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>Location Advantage</h5>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.778517895106!2d77.3779744!3d28.546376199999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce780dd751617%3A0xe2df203a4e655fb7!2sMahagun%20Medalleo!5e0!3m2!1sen!2sin!4v1696749039968!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="col-md-6">
+                        <ul>
+                            <li>7 KM from NH-9 (NH-24)</li>
+                            <li>2.5 KM drive from Gaur Chowk</li>
+                            <li>Right on 130 Meter wide road project</li>
+                            <li>9 KM from Sector-71, Noida</li>
+                            <li>11 KM from Noida City Center</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="home-box9">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h5>About Developer</h5>
+                    </div>
+                    <div class="col-md-6 text-center">
+                        Blue Square Infrastructure LLP is a group that is synonymous with quality, commitment, reliability and excellence in achievement. The group is recognized for delivering state-of-the-art ventures impeccable in design and outstanding in standards. We are a prominent real estate company engaged in handling a wide range of real estate projects including residential projects, serviced apartments and retail spaces with a prime focus on commercial spaces.
+                        
+                        We are introducing our new commercial project, which is an unrivalled blend of elegance and quality when it comes to commercial estates built to perfection. Spectrum@metro is a project that covers 9 acres of land and has the longest frontage in Delhi NCR, as well as world-class amenities. It will be an ultimate destination since it has a catchment area of 8, 00,000 people in the neighbourhood of this project with a large possibility of getting what you want.
+
+                        The location advantage of Spectrum@metro is a key attraction for the investors and consumers who are required to go long distances will get a destination which is hit in location and affordable too.
+
+                    </div>
                 </div>
             </div>
         </div>
 
 
         <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <script>
+            $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:3
+        },
+        1000:{
+            items:3
+        }
+    }
+})
+        </script>
     </body>
 </html>
