--- a/index.html
+++ b/index.html
@@ -336,12 +336,12 @@
                     <div class="col-md-12 text-center">
                         <h5>About Developer</h5>
                     </div>
-                    <div class="col-md-6 text-center">
-                        Blue Square Infrastructure LLP is a group that is synonymous with quality, commitment, reliability and excellence in achievement. The group is recognized for delivering state-of-the-art ventures impeccable in design and outstanding in standards. We are a prominent real estate company engaged in handling a wide range of real estate projects including residential projects, serviced apartments and retail spaces with a prime focus on commercial spaces.
+                    <div class="col-md-12 text-center">
+                        <p>Blue Square Infrastructure LLP is a group that is synonymous with quality, commitment, reliability and excellence in achievement. The group is recognized for delivering state-of-the-art ventures impeccable in design and outstanding in standards. We are a prominent real estate company engaged in handling a wide range of real estate projects including residential projects, serviced apartments and retail spaces with a prime focus on commercial spaces.</p>
                         
-                        We are introducing our new commercial project, which is an unrivalled blend of elegance and quality when it comes to commercial estates built to perfection. Spectrum@metro is a project that covers 9 acres of land and has the longest frontage in Delhi NCR, as well as world-class amenities. It will be an ultimate destination since it has a catchment area of 8, 00,000 people in the neighbourhood of this project with a large possibility of getting what you want.
+                        <p>We are introducing our new commercial project, which is an unrivalled blend of elegance and quality when it comes to commercial estates built to perfection. Spectrum@metro is a project that covers 9 acres of land and has the longest frontage in Delhi NCR, as well as world-class amenities. It will be an ultimate destination since it has a catchment area of 8, 00,000 people in the neighbourhood of this project with a large possibility of getting what you want.</p>
 
-                        The location advantage of Spectrum@metro is a key attraction for the investors and consumers who are required to go long distances will get a destination which is hit in location and affordable too.
+                        <p>The location advantage of Spectrum@metro is a key attraction for the investors and consumers who are required to go long distances will get a destination which is hit in location and affordable too.</p>
 
                     </div>
                 </div>
